project code added. Stories will be called by [project-code]-[number]. Switch between sprints included.

--- a/scrumapp-jsf/src/main/webapp/views/backlog.xhtml
+++ b/scrumapp-jsf/src/main/webapp/views/backlog.xhtml
@@ -11,7 +11,7 @@
 
 			<p:panelGrid id="container" columns="1" layout="grid"
 				style="border: 0px;">
-				<h:outputText value="#{backlogController.proyecto.nombre}"
+				<h:outputText value="#{backlogController.proyecto.nombre} - #{backlogController.proyecto.codigo}"
 					styleClass="tittle" />
 
 				<p:tabMenu activeIndex="0" style="border: 0px;">
