--- a/scrumapp-jsf/src/main/webapp/views/board.xhtml
+++ b/scrumapp-jsf/src/main/webapp/views/board.xhtml
@@ -20,7 +20,7 @@
 
 			<p:panelGrid id="container" columns="1" layout="grid"
 				style="border: 0px;">
-				<h:outputText value="#{boardController.proyecto.nombre}"
+				<h:outputText value="#{boardController.proyecto.nombre} - #{backlogController.proyecto.codigo}"
 					styleClass="tittle" />
 
 				<p:tabMenu activeIndex="1" style="border: 0px;">
