--- a/scrumapp-jsf/src/main/webapp/views/sprint.xhtml
+++ b/scrumapp-jsf/src/main/webapp/views/sprint.xhtml
@@ -65,14 +65,13 @@
 							toggleable="true" toggleSpeed="500" styleClass="pnl1">
 							<h:panelGrid columns="1" columnClasses="ui-grid-col-12"
 								style="width:100%">
-								<p:outputLabel for="descripcion">Descripcion</p:outputLabel>
 								<h:outputText id="descripcion" value="#{tarea.descripcion}" />
 								<p:separator />
-								<h:outputText value="#{tarea.estimacion}" />
+								<h:outputText value="#{tarea.horasDedicadas} / #{tarea.estimacion} horas" />
 								<p:separator />
-								<h:outputText value="#{tarea.horasDedicadas}" />
-								<p:separator />
-								<h:outputText value="#{tarea.observaciones}" />
+								<h:outputText value="#{tarea.fechaEstimadaFin}" >
+									<f:convertDateTime type="date" pattern="dd-MM-yyyy" />
+								</h:outputText>
 							</h:panelGrid>
 							<p:commandButton value="Editar" style="background: #5085b1;"
 								update=":formDialog:editartareaDialog" icon="fa fa-edit"
@@ -108,14 +107,13 @@
 							toggleable="true" toggleSpeed="500" styleClass="pnl2">
 							<h:panelGrid columns="1" columnClasses="ui-grid-col-12"
 								style="width:100%">
-								<p:outputLabel for="descripcion">Descripcion</p:outputLabel>
 								<h:outputText id="descripcion" value="#{tarea.descripcion}" />
 								<p:separator />
-								<h:outputText value="#{tarea.estimacion}" />
+								<h:outputText value="#{tarea.horasDedicadas} / #{tarea.estimacion}  horas" />
 								<p:separator />
-								<h:outputText value="#{tarea.horasDedicadas}" />
-								<p:separator />
-								<h:outputText value="#{tarea.observaciones}" />
+								<h:outputText value="#{tarea.fechaEstimadaFin}" >
+									<f:convertDateTime type="date" pattern="dd-MM-yyyy" />
+								</h:outputText>
 							</h:panelGrid>
 							<p:commandButton value="Editar" style="background: #5085b1;"
 								update=":formDialog:editartareaDialog" icon="fa fa-edit"
@@ -143,11 +141,11 @@
 								style="width:100%">
 								<h:outputText id="descripcion" value="#{tarea.descripcion}" />
 								<p:separator />
-								<h:outputText value="#{tarea.estimacion}" />
+								<h:outputText value="#{tarea.horasDedicadas} / #{tarea.estimacion}  horas" />
 								<p:separator />
-								<h:outputText value="#{tarea.horasDedicadas}" />
-								<p:separator />
-								<h:outputText value="#{tarea.observaciones}" />
+								<h:outputText value="#{tarea.fechaEstimadaFin}" >
+									<f:convertDateTime type="date" pattern="dd-MM-yyyy" />
+								</h:outputText>
 							</h:panelGrid>
 							<p:commandButton value="Editar" style="background: #5085b1;"
 								update=":formDialog:editartareaDialog" icon="fa fa-edit"
@@ -177,11 +175,11 @@
 								style="width:100%">
 								<h:outputText id="descripcion" value="#{tarea.descripcion}" />
 								<p:separator />
-								<h:outputText value="#{tarea.estimacion}" />
+								<h:outputText value="#{tarea.horasDedicadas} / #{tarea.estimacion}  horas" />
 								<p:separator />
-								<h:outputText value="#{tarea.horasDedicadas}" />
-								<p:separator />
-								<h:outputText value="#{tarea.observaciones}" />
+								<h:outputText value="#{tarea.fechaEstimadaFin}" >
+									<f:convertDateTime type="date" pattern="dd-MM-yyyy" />
+								</h:outputText>
 							</h:panelGrid>
 							<p:commandButton value="Editar" style="background: #5085b1;"
 								update=":formDialog:editartareaDialog" icon="fa fa-edit"
@@ -229,12 +227,12 @@
 
 		</h:form>
 		<h:form id="formDialog">
-			<p:dialog id="editartareaDialog" header="tarea de Usuario"
+			<p:dialog id="editartareaDialog" header="Tarea"
 				showEffect="fade" modal="true" widgetVar="editartareaDialog"
-				responsive="true" width="50%">
+				responsive="true" width="70%">
 				<p:ajax event="close" update=":formDialog:editartareaDialog"
 					resetValues="true" />
-				<p:panelGrid id="containerDialog" columns="1" layout="grid"
+				<p:panelGrid id="containerDialog" columns="2" layout="grid"
 					style="border: 0px;">
 					<p:outputPanel id="manage-tarea-content-nombre" class="ui-fluid">
 						<div class="p-field">
@@ -242,16 +240,6 @@
 							<p:inputText id="nombre"
 								value="#{sprintController.tareaSelec.nombre}" required="true" />
 						</div>
-					</p:outputPanel>
-					<p:outputPanel id="manage-tarea-content-desc" class="ui-fluid">
-						<div class="p-field">
-							<p:outputLabel for="descripcion">Descripcion</p:outputLabel>
-							<p:inputTextarea id="descripcion"
-								value="#{sprintController.tareaSelec.descripcion}" rows="9" />
-						</div>
-					</p:outputPanel>
-
-					<p:outputPanel id="manage-tarea-content-asginado" class="ui-fluid">
 						<div class="p-field">
 							<p:outputLabel for="asginado">Asignado a</p:outputLabel>
 							<p:selectOneMenu id="asginado"
@@ -263,9 +251,6 @@
 									itemLabel="#{dev.email}" itemValue="#{dev}" />
 							</p:selectOneMenu>
 						</div>
-					</p:outputPanel>
-
-					<p:outputPanel id="manage-tarea-content-historia" class="ui-fluid">
 						<div class="p-field">
 							<p:outputLabel for="historia">Historia de usuario</p:outputLabel>
 							<p:selectOneMenu id="historia"
@@ -274,9 +259,50 @@
 								<f:selectItem itemLabel="Selecciona Historia de Usuario"
 									itemValue="#{null}" noSelectionOption="true" />
 								<f:selectItems value="#{sprintController.historias}" var="h"
-									itemLabel="#{h.nombre}" itemValue="#{h}" />
+									itemLabel="#{h.codigo}" itemValue="#{h}" />
 							</p:selectOneMenu>
 						</div>
+					</p:outputPanel>
+					
+					<p:outputPanel id="manage-tarea-content-desc" class="ui-fluid">
+						<div class="p-field">
+							<p:outputLabel for="descripcion">Descripcion</p:outputLabel>
+							<p:inputTextarea id="descripcion"
+								value="#{sprintController.tareaSelec.descripcion}" rows="9" />
+						</div>
+					</p:outputPanel>
+
+					
+					<p:outputPanel id="manage-tarea-content-estimacion" class="ui-fluid">
+					<p:panelGrid id="containerEstimacion" columns="2" layout="grid" 
+					style="border: 0px;">
+						<p:outputPanel>
+							<p:outputLabel for="estimacion">Estimacion</p:outputLabel>
+							<p:inputText id="estimacion"
+								value="#{sprintController.tareaSelec.estimacion}"/>
+						</p:outputPanel>
+						
+						<p:outputPanel>
+							<p:outputLabel for="dedicadas">Horas dedicadas</p:outputLabel>
+							<p:inputText id="dedicadas"
+								value="#{sprintController.tareaSelec.horasDedicadas}" />
+						</p:outputPanel>
+						</p:panelGrid>
+					</p:outputPanel>
+					
+				<p:outputPanel id="manage-tarea-content-fecIni" class="ui-fluid">
+					<p:panelGrid id="containerFecIni" columns="2" layout="grid" 
+					style="border: 0px;">
+						<p:outputPanel>
+							<p:outputLabel for="fecini">Fecha inicio</p:outputLabel>
+							 <p:datePicker id="fecini" pattern="dd/MM/yyyy" value="#{sprintController.tareaSelec.fechaInicio}" />
+						</p:outputPanel>
+						
+						<p:outputPanel>
+							<p:outputLabel for="fecestfin">Fecha est. fin</p:outputLabel>
+							 <p:datePicker id="fecestfin" pattern="dd/MM/yyyy" value="#{sprintController.tareaSelec.fechaEstimadaFin}" />
+						</p:outputPanel>
+						</p:panelGrid>
 					</p:outputPanel>
 
 
@@ -305,8 +331,8 @@
 					<p:dataTable id="sprints" widgetVar="sprints" var="sprint"
 						value="#{sprintController.sprints}" size="large" reflow="true"
 						selection="#{sprintController.sprintSelec}" editable="true"
-						rowKey="#{sprint.idSprint}" paginator="true" rows="10"
-						rowSelectMode="add" paginatorPosition="bottom">
+						rowKey="#{sprint.idSprint}" scrollable="true" rows="10"
+						rowSelectMode="add" scrollHeight="70%">
 						
 					<p:ajax event="rowEdit" listener="#{sprintController.actualizarSprint}" >
 					<f:setPropertyActionListener value="#{sprint}"
