--- a/scrumapp-jsf/src/main/webapp/resources/css/style.css
+++ b/scrumapp-jsf/src/main/webapp/resources/css/style.css
@@ -130,3 +130,10 @@
 #formDialog\:containerFecIni .ui-panelgrid-cell {
 	padding-left: 0px;
 }
+
+.tableOrderable tbody {
+	cursor:move;
+}
+.ui-panel-titlebar.ui-widget-header.ui-helper-clearfix.ui-corner-all {
+	cursor:move;
+}
